Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-01-04 Kimmo
 PATCH: [ 1625344 ] Move OptionsMgr from MainFrame to MergeApp
  Src: FileActionScript.cpp MainFrm.cpp MainFrm.h Merge.cpp Merge.h
   OptionsInit.cpp PropRegistry.cpp PropTextColors.cpp SourceControl.cpp
  Src/Common: OptionsMgr.h
 Use Empty() method for CString instead of assigning empty string into it
  Src/Common: varprop.h

2006-12-31 Kimmo
 PATCH: [ 1625022 ] Constify OptionsManager parameters
  Src/Common: OptionsMgr.cpp OptionsMgr.h

2006-12-30 Kimmo
 PATCH: [ 1623772 ] Constify PathContext parameter strings
  Src: PathContext.cpp PathContext.h

2006-12-21 WinMerge experimental release 2.7.1.4 (SVN revision 3991)

2006-12-20 Takashi
 BUG: [ 1603061 ] "Copy Left/Right To .." doesn't work correctly(2)
  Src: FileActionScript.cpp DirActions.cpp

2006-12-20 Kimmo
 BUG: [ 1606583 ] VC6 build is broken
  Backout of patch [ 1603769 ] Send MergeCmdLineInfo between instances
  Src: MainFrm.cpp Merge.cpp MergeCmdLineInfo.cpp MergeCmdLineInfo.h
 Bump ShellExtension version to 1.10
  ShellExtension: ShellExtension.rc
 BUG: [ 1619689 ] Filefilter: ASP.NET Devel
  Filters: ASPNET.flt

2006-12-19 Kimmo
 PATCH: [ 1618358 ] Fix warning about non-standard extension with enum
  Src: MainFrm.cpp
 PATCH: [ 1618364 ] Make GPL URL const string
  Src: MainFrm.cpp

2006-12-18 Kimmo
 PATCH: [ 1617502 ] Cleanup use of enum in MovedLines
  Src: MovedLines.cpp

2006-12-17 Gal
 BUG: [ 1614558 ] Goto line doesn't work when word wrap is enabled
  Src: MergeEditView.cpp

2006-12-14 Kimmo
 BUG: [ 1602219 ] Crappy save of project files
  Src: MainFrm.cpp ProjectFilePathsDlg.cpp

2006-12-13 Kimmo
 PATCH: [ 1614442 ] Swedish translation update for WinMerge 2.6.2
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2006-12-13 Gal
 BUG: [ 1584068 ] location pane is inaccurate when word wrap is on (2)